# archer

./: Anchor.toml
programs/crowdfunding-plat/: Cargo.toml
programs/crowdfunding-plat/src/: lib.rs
programs/sol-crowdfunding-plat/: Cargo.toml
programs/sol-crowdfunding-plat/src/: lib.rs
programs/tic-tac-toe/src/: lib.rs
tests/: sol-crowdfunding-plat.ts
