[package]
name = "sol-crowdfunding-plat"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_crowdfunding_plat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
solana-program-test = "1.7.14"
solana-sdk = "1.7.14"

[dependencies]
anchor-lang = "0.25.0"
solana-sdk = "1.7.14"
borsh = "0.9.1"
borsh-derive = "0.9.1"